@@ -19,5 +19,5 @@ I wrote this for a final project in Programming Fundamentals II. It's a simple T
 
 1. `git clone https://github.com/clintmint/TicTacToe.git`
 2. `javac --module-path %PATH_TO_FX% --add-modules javafx.controls TicTacToe.java`
-3. `java TicTacToe`
+3. `java --module-path %PATH_TO_FX% --add-modules javafx.controls TicTacToe`
 
